# F4_template

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/Inc/: template.h
applications/Src/: main.c
boards/: .cproject  .mxproject  CMakeLists.txt  template.ioc
boards/Core/Src/: main.c
boards/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_dma.h
